fixed footer overlapping issue

--- a/Styles/Search.css
+++ b/Styles/Search.css
@@ -64,6 +64,7 @@ line-height: .75;
     margin-left: 46%;
     margin-top: 20px;
     font-size: 1.2em;
+    margin-bottom: 20px;
 }
 .panel-footer {
     margin-top: 30px;
@@ -72,7 +73,7 @@ line-height: .75;
     background-color: #222;
     border-top: 0;
     font-size:.8em;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
@@ -82,7 +83,7 @@ line-height: .75;
     display: flex;
     flex-wrap: wrap;  
     margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 10%;
 }
 
 .flex-container > div {
@@ -109,4 +110,7 @@ line-height: .75;
 #guide-loc{
     font-size: .8em;
     margin: 0;
+}
+#resultLable{
+    margin-top: 15px;
 }
